@@ -4,17 +4,19 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.mystack.techblog.entities.Post;
 import com.mystack.techblog.entities.Tag;
+import com.mystack.techblog.entities.User;
 import com.mystack.techblog.entities.dtos.PostDTO;
 import com.mystack.techblog.mapper.Mapper;
 import com.mystack.techblog.repositories.PostRepository;
 import com.mystack.techblog.repositories.TagRepository;
+import com.mystack.techblog.repositories.UserRepository;
+import com.mystack.techblog.services.auth.TokenService;
 
 @Service
 public class PostService {
@@ -25,22 +27,25 @@ public class PostService {
     @Autowired
     private TagRepository tagRepository;
 
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private TokenService tokenService;
+
     public List<PostDTO> findAll() {
         List<Post> dbPosts = repository.findAll();
-        return dbPosts.stream().map(post -> Mapper.postToDto(post))
-            .collect(Collectors.toList());
+        return dbPosts.stream().map(post -> Mapper.postToDto(post)).toList();
     }
 
     public PostDTO findById(Long id) {
         Post dbPost = repository.findById(id).orElse(null);
         if (dbPost == null) return null;
 
-        PostDTO dto = Mapper.postToDto(dbPost);
+        dbPost.setViews(dbPost.getViews() + 1);
+        dbPost = repository.save(dbPost);
 
-        dto.setViews(dbPost.getViews() + 1);
-
-        update(dto.getId(), dto);
-        return dto;
+        return Mapper.postToDto(dbPost);
     }
 
     public PostDTO create(PostDTO dto) {
@@ -48,7 +53,6 @@ public class PostService {
         dto.setCreatedAt(now);
         dto.setUpdatedAt(now);
         dto.setViews(0L);
-        dto.setLikes(0L);
 
         if (dto.getTags().size() == 0) {
             Post persisted = repository.save(Mapper.dtoToPost(dto));
@@ -89,5 +93,26 @@ public class PostService {
 
     public void delete(Long id) {
         repository.deleteById(id);
+    }
+
+    public String likePost(Long id, String token) {
+        token = token.replace("Bearer ", "");
+        String userEmail = tokenService.validateToken(token);
+
+        User user = userRepository.findUserByEmail(userEmail).orElse(null);
+        if (user == null) return null;
+
+        Post post = repository.findById(id).orElse(null);
+        if (post == null) return null;
+
+        if (post.getUsersLikes().contains(user)) {
+            post.getUsersLikes().remove(user);
+            repository.save(post);
+            return "Curtida removida com sucesso";
+        }
+
+        post.getUsersLikes().add(user);
+        repository.save(post);
+        return "Curtida adicionada com sucesso";
     }
 }
